<resources>
    <string name="app_name">SevenWindsStudioTask</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_error">Не удалось войти. Попробуйте снова!</string>
    <string name="loading_error">Ошибка загрузки данных!</string>
    <string name="sign_up_success">Вы успешно зарегистрировались!</string>
    <string name="sign_up_error">Не удалось зарегистрироваться. Попробуйте снова!</string>
    <string name="coffee_shop_name">BEDOEV COFFEE</string>
    <string name="distance_from_user">1 км от вас</string>
    <string name="login">Вход</string>
    <string name="e_mail">e-mail</string>
    <string name="example_example_ru">example@example.ru</string>
    <string name="password">Пароль</string>
    <string name="password_value">******</string>
    <string name="login_button">Войти</string>
    <string name="map">Карта</string>
    <string name="menu">Меню</string>
    <string name="button_to_billing">Перейти к оплате</string>
    <string name="nearby_coffee_shops">Ближайшие кофейни</string>
    <string name="order_accepted_text">Время ожидания заказа 15 минут! Спасибо, что выбрали нас!</string>
    <string name="button_to_main">На главную</string>
    <string name="order">Ваш заказ</string>
    <string name="button_pay">Оплатить</string>
    <string name="sign_up">Регистрация</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="menu_item_name">Эспрессо</string>
    <string name="menu_item_price">200 руб</string>
    <string name="menu_item_count">2</string>
    <string name="logout_confirm">Вы уверены что хотите выйти?</string>
    <string name="confirm">Подтверждение</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="snackbar_retry">Retry</string>
    <string name="price" translatable="false">%1$d ₽</string>
    <string name="error_passwords_do_not_match">Пароли не сопадают.</string>
    <string name="error_invalid_email">Пожалуйста, введите верный e-mail.</string>
    <string name="error_empty_password">Пароль не может быть пустым.</string>
    <string name="error_connection">Пожалуйста, проверьте ваше соединение с интернетом.</string>
    <string name="error_invalid_credentials">Неверный email или пароль.</string>
    <string name="error_request">Ошибка запроса.</string>
    <string name="error_account_is_taken">Аккаунт с этой почтой уже существует.</string>
    <string name="error_empty_email">Email не может быть пустым.</string>
    <string name="error_unknown">Неизвестная ошибка.</string>
    <string name="error_loading_coffee_shops">Не удалось загрузить кофейни.</string>
    <string name="error_loading_menu">Не удалось загрузить меню.</string>
    <string name="pay">Оплатить (%1$d ₽)</string>
    <string name="meters">м</string>
    <string name="kilometers">км</string>
    <string name="distance_to_me">%1$s от вас</string>
    <string name="unknown_distance">Ошибка в определении расстояния</string>


</resources>