<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".presentation.signup.SignUpFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="#846340" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:dividerColor="#C2C2C2"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="235dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textSize="15sp"
            android:layout_marginStart="18dp"
            android:textColor="#846340"/>

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:hint="@string/example_example_ru"
        android:textSize="18sp"
        android:textColor="#AF9479"
        android:paddingStart="15dp"
        android:textColorHint="#AF9479"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_edittext_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:textColor="#846340"/>

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:hint="@string/password_value"
        android:textSize="18sp"
        android:textColor="#AF9479"
        android:paddingStart="15dp"
        android:textColorHint="#AF9479"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_edittext_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password"
            android:textSize="15sp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:textColor="#846340"/>

    <EditText
        android:id="@+id/edit_text_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:hint="@string/password_value"
        android:textSize="18sp"
        android:textColor="#AF9479"
        android:paddingStart="15dp"
        android:textColorHint="#AF9479"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_edittext_background" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="#F6E5D1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_button_background"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="30dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="#F6E5D1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_button_background"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="30dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>