<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <TextView
        android:id="@+id/tv_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_logout_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:text="@string/logout_confirm"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_confirmation"
        app:layout_constraintTop_toBottomOf="@id/tv_confirmation" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_logout_message"
        app:layout_constraintStart_toStartOf="@+id/tv_logout_message"
        app:layout_constraintTop_toBottomOf="@id/tv_logout_message">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tv_logout_message"
            app:layout_constraintTop_toBottomOf="@id/tv_logout_message" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tv_logout_message"
            app:layout_constraintTop_toBottomOf="@id/tv_logout_message" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>